@@ -6323,7 +6323,7 @@ static void SceneObjectUpdateSpawn(PyMOLGlobals *G,CObjectUpdateThreadInfo *Thre
       PyList_SetItem(info_list,a,PyCObject_FromVoidPtr(Thread+a,NULL));
       n++;
     }
-    PXDecRef(PyObject_CallMethod(G->P_inst->cmd_do,"_object_update_spawn","Oi",info_list,n_thread));
+    PXDecRef(PyObject_CallMethod(G->P_inst->cmd,"_object_update_spawn","Oi",info_list,n_thread));
     Py_DECREF(info_list);
     PAutoUnblock(G,blocked);
   }
