@@ -785,6 +785,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 #define cSetting_cartoon_putty_transform    581
 #define cSetting_rock                       582
 #define cSetting_cone_quality               583
+#define cSetting_pdb_formal_charges         584
 
 /* when you add a new setting also remember:
    layer1/Setting.c
@@ -794,7 +795,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       584
+#define cSetting_INIT                       585
 
 #endif
 
