@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-04-19 Warren L. DeLano <warren@delsci.com>	
+
+	* added support for PDB formal charges.
+	
 2008-04-17 Warren L. DeLano <warren@delsci.com>	
 
 	* fixed bug with GL_BLEND for distance labels
